[package]
name = "drones"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Utilities
futures = "0.3.28"

ctrlc = "3.4.1"

tokio = { version = "1.33.0", features = ["full", "tracing"] }
tokio-util = "0.7.10"
# Version must be at 0.4.0, otherwise issues arise with CORS integration
tower-http = { version = "0.4.0", features = ["full"]}
tracing = "0.1.40"
tracing-attributes = "0.1.27"
tracing-subscriber = "0.3.17"
console-subscriber = "0.2.0"

axum = "0.6.20"
serde = "1.0.190"

geo = "0.26.0"
geo-types = "0.7.11"

rocket = "0.5.0"

