[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

build = "build/build.rs"

[dependencies]

# Utilities
futures = "0.3.28"

bevy_ecs = "0.13.1"

ctrlc = "3.4.1"
log = "0.4.21"

tokio = { version = "1.37.0", features = ["full", "tracing"] }
tokio-util = "0.7.10"

# Version must be at 0.4.0, otherwise issues arise with CORS integration
tower-http = { version = "0.4.0", features = ["full"]}
tracing = "0.1.40"
tracing-attributes = "0.1.27"
tracing-subscriber = "0.3.17"
console-subscriber = "0.2.0"

axum = "0.6.20"
serde = { version = "1.0.190", features = ["derive"]}
mavspec = { version = "0.3.3", features = ["specs", "rust"] }
mavio = { version = "0.2.6", features = ["async"]}
tower = { version = "0.4.13", features = ["full"] }
config = { version = "0.14.0", features = ["yaml"] }
tracing-test = "0.2.4"
kml = "0.8.5"
geo = "0.28.0"

[build-dependencies]
mavspec = { version = "0.3.4", features = ["fingerprints", "generators", "rust_gen"] }

